2006-07-06:  Added Vec.concat.

2006-06-08:  Fixed some GC-bugs.  Cleaned up C-code.

2006-01-21:  Updated copy of f2c.h to fix size-related bugs on AMD64.
             Fixed some warnings introduced by OCaml-3.09.

2006-01-18:  Fixed a bug in pbsv and sbmv.

             Thanks to Christophe Troestler <Christophe.Troestler@umh.ac.be>
             for contributing the patch!

2006-01-16:  Updated OCamlMakefile.

2005-12-09:  Fixed an installation problem on Darwin.

2005-10-06:  Fixed META-file for better integration with the
             OCaml-toplevel.

             Added new function:

               * Mat.copy_row

2005-09-22:  Added new function:

               * Mat.to_col_vecs

2005-09-21:  Added new function:

               * Vec.random  (for both real and complex numbers)

2005-08-24:  Added a new function:

               * Vec.append

2005-07-15:  Fixed two documentation generation bugs.

2005-07-14:  Major release (version 3)!

             The API has been significantly normalized, simplified and
             documented to make its use more convenient.

             ATTENTION: THE ORDER OF VECTOR ARGUMENTS TO FUNCTION AXPY
             HAS CHANGED, AND PARAMETER X IS LABELED.  IF YOUR COMPILER
             DOES NOT COMPLAIN ABOUT MISSING LABELS, YOUR PROGRAM WILL
             COMPILE BUT PRODUCE WRONG RESULTS.  ALWAYS LABEL PARAMETER
             X FOR AXPY, WHICH IS ALSO MUCH MORE READABLE.

             New LAPACK-function:

               * gesvd for complex numbers

                 Thanks to Egbert Ammicht <eammicht@lucent.com> for
                 this contribution!

             Added specific build rules for MacOS X.  Thanks to Patrick
             Cousot <Patrick.Cousot@ens.fr> for this contribution!

2005-06-20:  Relaxed a runtime check in gemm to let the user specify
             his own "k"-value.

2005-06-17:  New LAPACK-functions:

               * syevr
               * lamch

             New functions in Mat-module:
