@@ -1,5 +1,5 @@
 name="lacaml"
-version="3.0.17"
+version="3.0.18"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
